force-app/main/default/objects/CommitCaseHistory__c/CommitCaseHistory__c.object-meta.xml
<CustomObject>
    <description>Stores end-of-period summary of Commit Case Accuracy calculations per user</description>
    <label>CommitCaseHistory</label>
    <nameField>
        <displayFormat>CCH-{000000}</displayFormat>
        <label>Commit Case Summary</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CommitCaseHistories</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>