force-app/main/default/objects/CommitCaseHistory__c/fields/OppsAtEnd__c.field-meta.xml
<CustomField>
    <fullName>OppsAtEnd__c</fullName>
    <label>Opps at End</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>