force-app/main/default/objects/CommitCaseHistory__c/fields/OppsAtStart__c.field-meta.xml
<CustomField>
    <fullName>OppsAtStart__c</fullName>
    <label>Opps at Start</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>