force-app/main/default/objects/CommitCaseHistory__c/fields/PeriodId__c.field-meta.xml
<CustomField>
    <fullName>PeriodId__c</fullName>
    <label>Period Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>