force-app/main/default/objects/CommitCaseHistory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Accuracy__c</columns>
    <columns>OppsAtStart__c</columns>
    <columns>OppsAtEnd__c</columns>
    <columns>Seller__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>